# barely-node

./: CMakeLists.txt  import-map.json  package.json
example/: fs.js
src/: main.js
